# agenticlab_human

./: .gitignore  README.md  agenticlab_planner_executor_decoupling.md  code.md  pyproject.toml
configs/execution/: action_wrapper.yaml  x5_pipeline.yaml
configs/llm/: llm_interface_config.yaml
configs/perception/: camera_config.yaml  graspnet_config.yaml  obj_detector_config.yaml
configs/planning/: pddl_wrapper.yaml  task_parser_config.yaml  task_parser_prompt.txt  task_parser_prompt_with_pddl.txt
configs/robot/: flexiv_config.yaml  x5_config.yaml  x5_mock_config.yaml
data/TDM020-890_URDF/: CMakeLists.txt  package.xml
data/TDM020-890_URDF/config/: joint_names_TDM020-890.SLDASM.yaml
docs/: code_cleanup.md  code_inventory.md  main_tutorial.md
docs/archive/: code_cleanup.md  working_log.md
docs/grasp/: installation_guide_of_anygrasp (open-sourced).md
docs/pipeline/: execution_without_planning.md
docs/voice/: voice_environment.md  voice_module.md  voice_requirements.txt
src/agenticlab_human.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_action_executor.py  test_action_sequence.py  test_execution_pipeline.py  test_fine_tuned_yolo_detector.py  test_grasp_angle_filter.py  test_grasp_http.py  test_grasp_http_backend.py  test_graspnet_sampling.py  test_perception_backend.py  test_pipeline_loop.py  test_place_target.py  test_pour.py  test_save_pose_x5.py  test_x5_controller.py  test_x5_http.py  test_x5_remote_backend.py  test_x5_server.py  test_yolo_detector.py
train_yolo/: data_collect.py  train.md  train.py
(+124 files in other folders)
