[project]
name = "agenticlab_human"
version = "0.1.0"
description = "AgenticLab robot agent framework for humanoid"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
    "Pillow",
    "openai",
    "google-genai",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]
voice = [
    "numpy>=1.21.5",
    "sounddevice",
    "soundfile",
    "PyAudio",
    "pynput>=1.8.2",
    "torch",         # if you want to use your own choice of torch, ignore this
    "torchaudio",
    "funasr",
    "modelscope",
]
x5 = [
    "fastapi",
    "opencv-python",
    "pydantic",
    "pyserial",
    "requests",
    "uvicorn",
]
grasp-http = [
    "fastapi",
    "pydantic",
    "requests",
    "uvicorn",
]
yolo = [
    "ultralytics",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agenticlab_human*"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
